whitespaceParser.java
// Generated from whitespace.g4 by ANTLR 4.5.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class whitespaceParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, ENTER=4;
	public static final int
		RULE_file = 0, RULE_func = 1, RULE_push = 2, RULE_copy = 3, RULE_pop = 4, 
		RULE_copynth = 5, RULE_swicth = 6, RULE_slide = 7, RULE_add = 8, RULE_sub = 9, 
		RULE_mult = 10, RULE_div = 11, RULE_mod = 12, RULE_mark = 13, RULE_call = 14, 
		RULE_jump = 15, RULE_jumpz = 16, RULE_jumpn = 17, RULE_ends = 18, RULE_endp = 19, 
		RULE_outchar = 20, RULE_outnum = 21, RULE_readchar = 22, RULE_readnum = 23, 
		RULE_stack = 24, RULE_arithm = 25, RULE_flow = 26, RULE_io = 27, RULE_parameter = 28;
	public static final String[] ruleNames = {
		"file", "func", "push", "copy", "pop", "copynth", "swicth", "slide", "add", 
		"sub", "mult", "div", "mod", "mark", "call", "jump", "jumpz", "jumpn", 
		"ends", "endp", "outchar", "outnum", "readchar", "readnum", "stack", "arithm", 
		"flow", "io", "parameter"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "' '", "'\n'", "'\t'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "ENTER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "whitespace.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public whitespaceParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58);
				func();
				}
				}
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public PushContext push() {
			return getRuleContext(PushContext.class,0);
		}
		public CopyContext copy() {
			return getRuleContext(CopyContext.class,0);
		}
		public PopContext pop() {
			return getRuleContext(PopContext.class,0);
		}
		public CopynthContext copynth() {
			return getRuleContext(CopynthContext.class,0);
		}
		public SwicthContext swicth() {
			return getRuleContext(SwicthContext.class,0);
		}
		public SlideContext slide() {
			return getRuleContext(SlideContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public MultContext mult() {
			return getRuleContext(MultContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public ModContext mod() {
			return getRuleContext(ModContext.class,0);
		}
		public MarkContext mark() {
			return getRuleContext(MarkContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public JumpContext jump() {
			return getRuleContext(JumpContext.class,0);
		}
		public JumpzContext jumpz() {
			return getRuleContext(JumpzContext.class,0);
		}
		public JumpnContext jumpn() {
			return getRuleContext(JumpnContext.class,0);
		}
		public EndsContext ends() {
			return getRuleContext(EndsContext.class,0);
		}
		public EndpContext endp() {
			return getRuleContext(EndpContext.class,0);
		}
		public OutcharContext outchar() {
			return getRuleContext(OutcharContext.class,0);
		}
		public OutnumContext outnum() {
			return getRuleContext(OutnumContext.class,0);
		}
		public ReadcharContext readchar() {
			return getRuleContext(ReadcharContext.class,0);
		}
		public ReadnumContext readnum() {
			return getRuleContext(ReadnumContext.class,0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitFunc(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_func);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				push();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				copy();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				pop();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				copynth();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(67);
				swicth();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(68);
				slide();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(69);
				add();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(70);
				sub();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(71);
				mult();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(72);
				div();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(73);
				mod();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(74);
				mark();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(75);
				call();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(76);
				jump();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(77);
				jumpz();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(78);
				jumpn();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(79);
				ends();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(80);
				endp();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(81);
				outchar();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(82);
				outnum();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(83);
				readchar();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(84);
				readnum();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PushContext extends ParserRuleContext {
		public StackContext stack() {
			return getRuleContext(StackContext.class,0);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public PushContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_push; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterPush(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitPush(this);
		}
	}

	public final PushContext push() throws RecognitionException {
		PushContext _localctx = new PushContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_push);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			stack();
			setState(88);
			match(T__0);
			setState(89);
			parameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CopyContext extends ParserRuleContext {
		public StackContext stack() {
			return getRuleContext(StackContext.class,0);
		}
		public CopyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_copy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterCopy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitCopy(this);
		}
	}

	public final CopyContext copy() throws RecognitionException {
		CopyContext _localctx = new CopyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_copy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			stack();
			setState(92);
			match(T__1);
			setState(93);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PopContext extends ParserRuleContext {
		public StackContext stack() {
			return getRuleContext(StackContext.class,0);
		}
		public PopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterPop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitPop(this);
		}
	}

	public final PopContext pop() throws RecognitionException {
		PopContext _localctx = new PopContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			stack();
			setState(96);
			match(T__1);
			setState(97);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CopynthContext extends ParserRuleContext {
		public StackContext stack() {
			return getRuleContext(StackContext.class,0);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public CopynthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_copynth; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterCopynth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitCopynth(this);
		}
	}

	public final CopynthContext copynth() throws RecognitionException {
		CopynthContext _localctx = new CopynthContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_copynth);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			stack();
			setState(100);
			match(T__2);
			setState(101);
			match(T__0);
			setState(102);
			parameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SwicthContext extends ParserRuleContext {
		public StackContext stack() {
			return getRuleContext(StackContext.class,0);
		}
		public SwicthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_swicth; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterSwicth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitSwicth(this);
		}
	}

	public final SwicthContext swicth() throws RecognitionException {
		SwicthContext _localctx = new SwicthContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_swicth);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			stack();
			setState(105);
			match(T__1);
			setState(106);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SlideContext extends ParserRuleContext {
		public StackContext stack() {
			return getRuleContext(StackContext.class,0);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public SlideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_slide; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterSlide(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitSlide(this);
		}
	}

	public final SlideContext slide() throws RecognitionException {
		SlideContext _localctx = new SlideContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_slide);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			stack();
			setState(109);
			match(T__2);
			setState(110);
			match(T__1);
			setState(111);
			parameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public ArithmContext arithm() {
			return getRuleContext(ArithmContext.class,0);
		}
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterAdd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitAdd(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_add);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			arithm();
			setState(114);
			match(T__0);
			setState(115);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubContext extends ParserRuleContext {
		public ArithmContext arithm() {
			return getRuleContext(ArithmContext.class,0);
		}
		public SubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterSub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitSub(this);
		}
	}

	public final SubContext sub() throws RecognitionException {
		SubContext _localctx = new SubContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			arithm();
			setState(118);
			match(T__0);
			setState(119);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultContext extends ParserRuleContext {
		public ArithmContext arithm() {
			return getRuleContext(ArithmContext.class,0);
		}
		public MultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mult; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterMult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitMult(this);
		}
	}

	public final MultContext mult() throws RecognitionException {
		MultContext _localctx = new MultContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_mult);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			arithm();
			setState(122);
			match(T__0);
			setState(123);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DivContext extends ParserRuleContext {
		public ArithmContext arithm() {
			return getRuleContext(ArithmContext.class,0);
		}
		public DivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_div; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitDiv(this);
		}
	}

	public final DivContext div() throws RecognitionException {
		DivContext _localctx = new DivContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_div);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			arithm();
			setState(126);
			match(T__2);
			setState(127);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModContext extends ParserRuleContext {
		public ArithmContext arithm() {
			return getRuleContext(ArithmContext.class,0);
		}
		public ModContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterMod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitMod(this);
		}
	}

	public final ModContext mod() throws RecognitionException {
		ModContext _localctx = new ModContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_mod);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			arithm();
			setState(130);
			match(T__0);
			setState(131);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MarkContext extends ParserRuleContext {
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public MarkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mark; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterMark(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitMark(this);
		}
	}

	public final MarkContext mark() throws RecognitionException {
		MarkContext _localctx = new MarkContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_mark);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			flow();
			setState(134);
			match(T__0);
			setState(135);
			match(T__0);
			setState(136);
			parameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallContext extends ParserRuleContext {
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitCall(this);
		}
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			flow();
			setState(139);
			match(T__0);
			setState(140);
			match(T__2);
			setState(141);
			parameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JumpContext extends ParserRuleContext {
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public JumpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jump; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterJump(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitJump(this);
		}
	}

	public final JumpContext jump() throws RecognitionException {
		JumpContext _localctx = new JumpContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_jump);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			flow();
			setState(144);
			match(T__0);
			setState(145);
			match(T__1);
			setState(146);
			parameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JumpzContext extends ParserRuleContext {
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public JumpzContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jumpz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterJumpz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitJumpz(this);
		}
	}

	public final JumpzContext jumpz() throws RecognitionException {
		JumpzContext _localctx = new JumpzContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_jumpz);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			flow();
			setState(149);
			match(T__2);
			setState(150);
			match(T__0);
			setState(151);
			parameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JumpnContext extends ParserRuleContext {
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public JumpnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jumpn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterJumpn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitJumpn(this);
		}
	}

	public final JumpnContext jumpn() throws RecognitionException {
		JumpnContext _localctx = new JumpnContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_jumpn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			flow();
			setState(154);
			match(T__2);
			setState(155);
			match(T__2);
			setState(156);
			parameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndsContext extends ParserRuleContext {
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public EndsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ends; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterEnds(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitEnds(this);
		}
	}

	public final EndsContext ends() throws RecognitionException {
		EndsContext _localctx = new EndsContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_ends);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			flow();
			setState(159);
			match(T__2);
			setState(160);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndpContext extends ParserRuleContext {
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public EndpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterEndp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitEndp(this);
		}
	}

	public final EndpContext endp() throws RecognitionException {
		EndpContext _localctx = new EndpContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_endp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			flow();
			setState(163);
			match(T__1);
			setState(164);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutcharContext extends ParserRuleContext {
		public IoContext io() {
			return getRuleContext(IoContext.class,0);
		}
		public OutcharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outchar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).enterOutchar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof whitespaceListener ) ((whitespaceListener)listener).exitOutchar(this);
		}
	}

	public final OutcharContext outchar() throws RecognitionException {
		OutcharContext _localctx = new OutcharContext(_ctx, getState());
		enterRule(_localctx, 40, RULE_outchar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			io();
			setState(167);
			match(T__0);
			setState(168);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
